Convert more projects

--- a/federated-css/package.json
+++ b/federated-css/package.json
@@ -1,30 +1,6 @@
 {
-
   "version": "1.2.3",
   "name": "federated-css-mono",
-    "workspaces": [
-      "expose-remotes/expose-css",
-      "expose-remotes/expose-css-module",
-      "expose-remotes/expose-jss",
-      "expose-remotes/expose-less",
-      "expose-remotes/expose-scss",
-      "expose-remotes/expose-styled-component",
-      "expose-remotes/expose-tailwind-css-global",
-      "expose-remotes/expose-tailwind-css-module",
-      "consumers-react/css-and-styled-component",
-      "consumers-react/less-and-scss",
-      "consumers-react/css-module-and-jss",
-      "consumers-react/tailwind-global-and-less",
-      "consumers-react/tailwind-module-and-jss",
-      "consumers-react/any-combination",
-      "consumers-react/combination-of-5",
-      "consumers-react/combination-of-4",
-      "consumers-nextjs/jss-and-tailwind-global",
-      "consumers-nextjs/jss-css-and-tailwind-module",
-      "consumers-nextjs/less-and-styled-component",
-      "consumers-nextjs/combination-of-4",
-      "consumers-nextjs/any-combination"
-    ],
   "scripts": {
     "build": "pnpm --filter build",
     "clean": "pnpm --filter --parallel clean",
@@ -43,7 +19,5 @@
     "start:nextjs:jss-css-and-tailwind-module": "pnpm --filter @federated-css/next-jss-css-and-tailwind-module --parallel start",
     "start:nextjs:less-and-styled-component": "pnpm --filter @federated-css/next-less-and-styled-component --parallel start"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
