--- a/loadable-react-16/app2/package.json
+++ b/loadable-react-16/app2/package.json
@@ -2,11 +2,11 @@
   "name": "loadable-react-16_app2",
   "version": "0.0.0",
   "scripts": {
-    "start": "yarn build && yarn serve",
+    "start": "pnpm build && pnpm serve",
     "serve": "node dist/server/main.js",
-    "build": "yarn build:server && yarn build:client",
-    "build:client": "rimraf dist/client && npx webpack --mode=production --progress --config config/webpack.client.js",
-    "build:server": "rimraf dist/server && npx webpack --mode=production --progress --config config/webpack.server.js"
+    "build": "pnpm build:server && pnpm build:client",
+    "build:client": "rimraf dist/client && pnpm webpack --mode=production --progress --config config/webpack.client.js",
+    "build:server": "rimraf dist/server && pnpm webpack --mode=production --progress --config config/webpack.server.js"
   },
   "dependencies": {
     "@loadable/babel-plugin": "^5.13.2",
