--- a/loadable-react-18/package.json
+++ b/loadable-react-18/package.json
@@ -1,17 +1,12 @@
 {
   "name": "loadable-react-18",
   "version": "0.0.1",
-
-  "workspaces": [
-    "app1",
-    "app2"
-  ],
   "scripts": {
     "start": "pnpm --filter loadable-react-18_* --parallel start",
     "build": "pnpm --filter loadable-react-18_* build",
     "serve": "pnpm --filter loadable-react-18_* --parallel serve",
     "clean": "pnpm --filter loadable-react-18_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
