install cache restore global

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "workspaces": [
     "advanced-api/automatic-vendor-sharing",
+    "advanced-api/automatic-vendor-sharing/*",
     "advanced-api/dynamic-remotes",
     "advanced-api/dynamic-remotes-runtime-environment-variables",
     "advanced-api/dynamic-remotes-synchronous-imports",
