--- a/complete-react-case/main-app/package.json
+++ b/complete-react-case/main-app/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "scripts": {
     "webpack": "webpack --watch",
-    "serve": "serve dist -p 3002",
+    "serve": "serve dist -p 3002 --cors",
     "start": "concurrently \"npm run webpack\" \"npm run serve\""
   },
   "keywords": [],
