--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "advanced-api/automatic-vendor-sharing",
     "advanced-api/automatic-vendor-sharing/*",
-    "advanced-api/dynamic-remotes",
-    "advanced-api/dynamic-remotes-runtime-environment-variables",
-    "advanced-api/dynamic-remotes-synchronous-imports",
+    "advanced-api/dynamic-remotes/*",
+    "advanced-api/dynamic-remotes-runtime-environment-variables/*",
+    "advanced-api/dynamic-remotes-synchronous-imports/*",
     "angular-universal-ssr",
     "angular11-microfrontends-ngrx",
     "angular11-microfrontends-ngxs",
