cache node module on yarn hash

--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "private": true,
   "workspaces": [
     "advanced-api/automatic-vendor-sharing/*",
+    "advanced-api/automatic-vendor-sharing",
     "advanced-api/dynamic-remotes/*",
+    "advanced-api/dynamic-remotes",
     "advanced-api/dynamic-remotes-runtime-environment-variables/*",
+    "advanced-api/dynamic-remotes-runtime-environment-variables",
     "advanced-api/dynamic-remotes-synchronous-imports/*",
+    "advanced-api/dynamic-remotes-synchronous-imports",
     "angular-universal-ssr",
     "angular11-microfrontends-ngrx",
     "angular11-microfrontends-ngxs",
