--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -39,6 +39,7 @@ jobs:
     if: always()
     steps:
       - name: Save env variables
+        id: save-env-variables
         run: |
           mkdir -p ./workflow
           echo "${{ github.event.pull_request.number }}" > ./workflow/prNum
@@ -46,6 +47,7 @@ jobs:
           echo "${{ github.repository }}" > ./workflow/repoFullName
           echo "${{ github.repository_owner }}" > ./workflow/ownerName
       - name: Upload artifact
+        id: upload-artifact
         uses: actions/upload-artifact@v3
         with:
           name: env_for_comment
@@ -57,6 +59,7 @@ jobs:
     needs: stop-previous-run
     steps:
       - name: Checkout
+        id: checkout
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -65,6 +68,7 @@ jobs:
           fetch-depth: 0
 
       - name: Check if forked master is up to date
+        id: check-forked-master
         if: github.repository_owner == 'module-federation'
         run: |
           echo "${{ github.repository_owner }}"
@@ -93,6 +97,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - name: Checkout
+        id: checkout-matrix
         uses: actions/checkout@v3
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -109,6 +114,7 @@ jobs:
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
       - name: Changed workspaces
+        id: changed-workspaces
         run: |
           echo '${{ steps.set-matrix.outputs.matrix }}'
 
@@ -119,6 +125,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
+        id: checkout-code
         uses: actions/checkout@v3
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -126,37 +133,40 @@ jobs:
           fetch-depth: 0
 
       - name: Free up some space
+        id: free-up-space
         run: ${{ env.FILES_TO_DELETE }}
 
         # Hash yarn.lock files to use it as a cache key, if yarn.lock files are changed, the cache will be invalidated
       - name: Check Yarn hash
-        id: yarn-hash
+        id: check-yarn-hash
         run: |
           yarnHash="$(npx hash-files -f '["**/yarn.lock"]' -a sha256)"
           echo "yarnHash=$yarnHash" >> $GITHUB_OUTPUT
 
       - name: Restore Yarn Global Cache
+        id: restore-yarn-global-cache
         uses: actions/cache/restore@v3
-        id: yarn-global-cache-restore
         with:
           path: ${{ env.YARN_CACHE_PATH }}
           key: yarn-global-cache
       - name: Restore Yarn and Cypress cache
+        id: restore-yarn-cypress-cache
         uses: actions/cache/restore@v3
-        id: yarn-cache
         with:
           path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.yarn-hash.outputs.yarnHash }}
+          key: e2e-cache-${{ steps.check-yarn-hash.outputs.yarnHash }}
           restore-keys: |
             e2e-cache-
             e2e-
 
       - name: Check disk space before install
+        id: check-disk-space-before-install
         run: |
           df -h
 
       - name: Install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        id: install-dependencies
+        if: steps.restore-yarn-cypress-cache.outputs.cache-hit != 'true'
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: |
@@ -164,19 +174,20 @@ jobs:
           npm install lerna@6 -g
           lerna bootstrap
       - name: Cache Yarn and Cypress
+        id: cache-yarn-cypress
         uses: actions/cache/save@v3
-        id: yarn-global-cache
         with:
           path: ${{ env.YARN_CACHE_PATH }}
           key: yarn-global-cache-${{ github.run_id }} # Can use time based key as well
 
       - name: Create additional cache
+        id: create-additional-cache
         uses: actions/cache/save@v3
-        id: yarn-cache
         with:
           path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.yarn-hash.outputs.yarnHash }}
+          key: e2e-cache-${{ steps.check-yarn-hash.outputs.yarnHash }}
       - name: Check disk space after installation
+        id: check-disk-space-after-installation
         run: |
           df -h
 
@@ -191,6 +202,7 @@ jobs:
       matrix: ${{fromJson(needs.setup-matrix.outputs.matrix)}}
     steps:
       - name: Checkout
+        id: checkout-e2e
         uses: actions/checkout@v3
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
@@ -198,32 +210,34 @@ jobs:
           fetch-depth: 0
 
       - name: Free up some space
+        id: free-up-space-e2e
         run: ${{ env.FILES_TO_DELETE }}
 
       - name: Check disk space before install
+        id: check-disk-space-before-install-e2e
         run: |
           df -h
 
         # Hash yarn.lock files to use it as a cache key, if yarn.lock files are changed, the cache will be invalidated
       - name: Check Yarn hash
-        id: yarn-hash
+        id: check-yarn-hash-e2e
         run: |
           yarnHash="$(npx hash-files -f '["**/yarn.lock"]' -a sha256)"
           echo "yarnHash=$yarnHash" >> $GITHUB_OUTPUT
 
       - name: Restore Yarn and Cypress cache
+        id: restore-yarn-cypress-cache-e2e
         uses: actions/cache/restore@v3
-        id: yarn-cache
         with:
           path: ${{ env.CACHE_PATH }}
-          key: e2e-cache-${{ steps.yarn-hash.outputs.yarnHash }}
+          key: e2e-cache-${{ steps.check-yarn-hash-e2e.outputs.yarnHash }}
           restore-keys: |
             e2e-cache-
             e2e-
 
       - name: Restore Yarn Global Cache
+        id: restore-yarn-global-cache-e2e
         uses: actions/cache/restore@v3
-        id: yarn-global-cache
         with:
           path: ${{ env.YARN_CACHE_PATH }}
           key: yarn-global-cache-${{ github.run_id }} # Can use time based key as well
@@ -232,7 +246,8 @@ jobs:
             yarn-global-cache-
 
       - name: Install deps
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        id: install-deps-e2e
+        if: steps.restore-yarn-cypress-cache-e2e.outputs.cache-hit != 'true'
         env:
           NODE_OPTIONS: "--max_old_space_size=4096"
         run: |
@@ -241,6 +256,7 @@ jobs:
           lerna bootstrap
 
       - name: Install sample deps
+        id: install-sample-deps
         # TODO Uncomment when yarn will work properly from the root and install all nessessary deps. Also please, add yarn install to the run section below instead of npx lerna exec
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: |
@@ -248,20 +264,24 @@ jobs:
           echo 'test'
 
       - name: Check disk space after install
+        id: check-disk-space-after-install-e2e
         run: |
           df -h
 
       - name: Set up node
+        id: setup-node
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
       - name: Run sample e2e tests
+        id: run-sample-e2e-tests
         run: |
           node -v
           npx lerna run --scope=${{ matrix.container }} e2e:ci
 
       - name: Create artifacts for Allure report
+        id: create-artifacts-allure-report
         uses: actions/upload-artifact@v3
         if: always()
         with:
