--- a/package.json
+++ b/package.json
@@ -10,22 +10,18 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "advanced-api/automatic-vendor-sharing",
     "advanced-api/automatic-vendor-sharing/*",
-    "advanced-api/dynamic-remotes",
+    "advanced-api/automatic-vendor-sharing",
     "advanced-api/dynamic-remotes/*",
-    "advanced-api/dynamic-remotes-runtime-environment-variables",
+    "advanced-api/dynamic-remotes",
     "advanced-api/dynamic-remotes-runtime-environment-variables/*",
-    "advanced-api/dynamic-remotes-synchronous-imports",
+    "advanced-api/dynamic-remotes-runtime-environment-variables",
     "advanced-api/dynamic-remotes-synchronous-imports/*",
+    "advanced-api/dynamic-remotes-synchronous-imports",
     "angular-universal-ssr",
-    "angular-universal-ssr/*",
     "angular11-microfrontends-ngrx",
-    "angular11-microfrontends-ngrx/*",
     "angular11-microfrontends-ngxs",
-    "angular11-microfrontends-ngxs/*",
     "angular11-microfrontends-scully",
-    "angular11-microfrontends-scully/*",
     "angular12-microfrontends",
     "angular14-react",
     "angular14-react/*",
@@ -45,7 +41,6 @@
     "comprehensive-demo-react18",
     "comprehensive-demo-react18/*",
     "cra",
-    "cra/*",
     "cra-react-app-rewired",
     "cra-react-app-rewired/*",
     "css-isolation",
@@ -155,8 +150,8 @@
     "wait-on": "7.0.1"
   },
   "scripts": {
-    "list:all": "lerna list",
-    "list:changed": "lerna list --since=origin/master",
+    "list:all": "lerna list --all --json",
+    "list:changed": "lerna list --all --since=origin/master --json",
     "bootstrap": "lerna bootstrap --ignore-scripts",
     "build": "lerna run --parallel build",
     "submodules": "git pull --recurse-submodules",
