--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -148,7 +148,9 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: ${{ env.YARN_CACHE_PATH }}
-          key: yarn-global-cache
+          restore-keys: |
+            yarn-global-cache
+            yarn-global-cache-
       - name: Restore Yarn and Cypress cache
         id: restore-yarn-cypress-cache
         uses: actions/cache/restore@v3
