fix next issues

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -146,6 +146,7 @@ jobs:
       - name: Restore Yarn Global Cache
         id: restore-yarn-global-cache
         uses: actions/cache/restore@v3
+        key: yarn-global-cache-${{ github.run_id }} # Can use time based key as well
         with:
           path: ${{ env.YARN_CACHE_PATH }}
           restore-keys: |
