fix install issues

--- a/package.json
+++ b/package.json
@@ -148,8 +148,8 @@
     "@shelex/cypress-allure-plugin": "2.38.3",
     "allure-commandline": "2.21.0",
     "concurrently": "7.6.0",
-    "cross-spawn": "7.0.3",
     "cross-env": "7.0.3",
+    "cross-spawn": "7.0.3",
     "cypress": "10",
     "cypress-fill-command": "1.0.2",
     "cypress-real-events": "1.10.3",
@@ -157,7 +157,7 @@
     "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "6.4.1",
+    "lerna": "^6.6.2",
     "mocha": "10.2.0",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
