fix install issues

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -177,6 +177,7 @@ jobs:
           NODE_OPTIONS: '--max_old_space_size=4096'
         run: |
           echo "Yarn has changed - installing dependencies ... "
+          npm i pnpm -g
           pnpm install
       - name: Cache Yarn and Cypress
         id: cache-yarn-cypress
