fix install issues

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -258,6 +258,7 @@ jobs:
           NODE_OPTIONS: '--max_old_space_size=4096'
         run: |
           echo "Yarn changed - install deps ... "
+          npm i pnpm -g
           pnpm install
 
       - name: Install sample deps
