Fix vue3-demo example e2e tests

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -121,8 +121,8 @@ jobs:
         id: set-matrix
         run: |
           npm i pnpm -g
-          all="$(pnpm list --filter "*" --only-projects --depth -1 --json)"
-          diff="$(pnpm list --filter "...[origin/master]" --only-projects --depth -1 --json)"
+          all="$(pnpm list:all)"
+          diff="$(pnpm list:changed)"
           matrix="$(node checkChangedWorkspaces.js "$all" "$diff")"
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
