--- a/vite-vue-microfrontends/host/package.json
+++ b/vite-vue-microfrontends/host/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vite-vue-microfrontends_host",
   "version": "0.0.0",
-
   "scripts": {
     "dev": "run-p vite:dev force-vite-restart",
     "vite:dev": "vite --port 4173",
@@ -14,7 +13,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.28",
-    "vue": "^3.2.45"
+    "vue": "3.3.7"
   },
   "devDependencies": {
     "@module-federation/vite": "0.2.6",
