--- a/modernjs-medusa/package.json
+++ b/modernjs-medusa/package.json
@@ -2,17 +2,11 @@
   "name": "modernjs-medusa",
   "private": true,
   "version": "1.0.0",
-    "workspaces": [
-      "host",
-      "provider"
-    ],
   "scripts": {
-    "start": "pnpm --filter --parallel dev",
-    "build": "pnpm --filter build",
-    "serve": "pnpm --filter --parallel serve",
-    "clean": "pnpm --filter --parallel clean"
+    "start": "concurrently \"cd ./host && pnpm dev\" \"cd ./provider && pnpm dev\"",
+    "build": "concurrently \"cd ./host && pnpm build\" \"cd ./provider && pnpm build\"",
+    "serve": "concurrently \"cd ./host && pnpm serve\" \"cd ./provider && pnpm serve\"",
+    "clean": "concurrently \"cd ./host && pnpm clean\" \"cd ./provider && pnpm clean\""
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
