--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "concurrently": "7.6.0",
     "cross-env": "7.0.3",
     "cross-spawn": "7.0.3",
-    "cypress": "10",
+    "cypress": "10.0.2",
     "cypress-fill-command": "1.0.2",
     "cypress-real-events": "1.10.3",
     "cypress-wait-until": "1.7.2",
@@ -158,13 +158,14 @@
     "jest": "26.6.3",
     "lerna": "^6.6.2",
     "mocha": "10.2.0",
+    "moment": "2.29.4",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
   "scripts": {
-    "list:all": "lerna list --all --json",
-    "list:changed": "lerna list --all --since=origin/master --json",
+    "list:all": "pnpm list --filter \"*\" --only-projects --depth -1 --json",
+    "list:changed": "pnpm list --filter \"...[origin/master]\" --only-projects --depth -1 --json",
     "bootstrap": "lerna bootstrap --ignore-scripts",
     "build": "pnpm --filter --parallel build",
     "submodules": "git pull --recurse-submodules",
