--- a/vue3-demo-federation-with-vite/package.json
+++ b/vue3-demo-federation-with-vite/package.json
@@ -1,18 +1,14 @@
 {
   "name": "vue3-demo-federation-with-vite",
-  "workspaces": [
-    "./vite-side",
-    "./webpack-side"
-  ],
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --parallel --filter vue3-demo-federation-with-vite_* start",
     "build": "pnpm --parallel --filter vue3-demo-federation-with-vite_* build",
-    "serve": "pnpm --parallel --filter vue3-demo-federation-with-vite_* serve",
-    "e2e:ci": "pnpm build && pnpm serve & wait-on http-get://localhost:5000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "serve": "pnpm build && pnpm --parallel --filter vue3-demo-federation-with-vite_* serve",
+    "e2e:ci": "pnpm serve & pnpm cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "pnpm": "7.32.2",
-    "wait-on": "7.0.1"
+    "wait-on": "7.0.1",
+    "concurrently": "7.6.0"
   }
 }
