--- a/vue3-demo/package.json
+++ b/vue3-demo/package.json
@@ -1,16 +1,12 @@
 {
   "name": "vue3-demo",
-  "workspaces": [
-    "./home",
-    "./layout"
-  ],
   "version": "0.0.0",
   "scripts": {
-    "start": "pnpm --filter vue3-demo_* run start",
-    "build": "pnpm --filter vue3-demo_* build",
+    "start": "pnpm --filter vue3-demo_* --parallel start",
+    "build": "pnpm --filter vue3-demo_* --parallel build",
     "serve": "pnpm --filter vue3-demo_* --parallel serve",
     "clean": "pnpm --filter vue3-demo_* --parallel clean",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && pnpm cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
