Remove more yarn refs, fix vite packages

--- a/nextjs-react/package.json
+++ b/nextjs-react/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install:apps": "concurrently \"yarn --cwd host-app\" \"yarn --cwd remote-app\"",
-    "start": "pnpm --filter nextjs-react_* run dev",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
+    "start": "pnpm --parallel --filter nextjs-react_* run dev",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
   "keywords": [],
   "author": "rahulteja-dev",
