--- a/vue2-in-vue3/package.json
+++ b/vue2-in-vue3/package.json
@@ -1,8 +1,6 @@
 {
   "name": "vue2-in-vue3",
   "private": true,
-
-
   "workspaces": [
     "./vue2",
     "./vue3"
@@ -13,7 +11,7 @@
     "build": "pnpm --filter vue2-in-vue3_vue* build",
     "serve": "pnpm --filter vue2-in-vue3_vue* --parallel serve",
     "clean": "pnpm --filter vue2-in-vue3_vue* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
