--- a/delegate-modules/package.json
+++ b/delegate-modules/package.json
@@ -2,16 +2,16 @@
   "name": "delegate-modules",
   "private": true,
   "workspaces": [
-      "./app1",
-      "./app2"
-    ],
+    "./app1",
+    "./app2"
+  ],
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter delegate-modules_* --parallel start",
     "build": "pnpm --filter delegate-modules_* build",
     "serve": "pnpm --filter delegate-modules_* --parallel serve",
     "clean": "pnpm --filter delegate-modules_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
