--- a/different-react-versions-isolated/package.json
+++ b/different-react-versions-isolated/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter different-react-versions-isolated_app* --parallel start",
-    "build": "pnpm --filter different-react-versions-isolated_app* build",
+    "build": "pnpm --filter different-react-versions-isolated_app* --parallel build",
     "serve": "pnpm --filter different-react-versions-isolated_app* --parallel serve",
     "clean": "pnpm --filter different-react-versions-isolated_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
