--- a/different-react-versions-typescript/package.json
+++ b/different-react-versions-typescript/package.json
@@ -2,16 +2,16 @@
   "name": "different-react-versions-typescript",
   "private": true,
   "version": "0.0.0",
-    "workspaces": [
-      "app1",
-      "app2"
-    ],
+  "workspaces": [
+    "app1",
+    "app2"
+  ],
   "scripts": {
     "start": "pnpm --filter different-react-versions-typescript_* --parallel start",
     "build": "pnpm --filter different-react-versions-typescript_* build",
     "serve": "pnpm --filter different-react-versions-typescript_* --parallel serve",
     "clean": "pnpm --filter different-react-versions-typescript_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ &&  npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ &&  npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
