--- a/nested/package.json
+++ b/nested/package.json
@@ -1,19 +1,13 @@
 {
   "name": "nested",
-  "workspaces": [
-    "./app1",
-    "./app2",
-    "./app3"
-  ],
   "private": true,
-
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter nested_app* --parallel start",
     "build": "pnpm --filter nested_app* build",
     "serve": "pnpm --filter nested_app* --parallel serve",
     "clean": "pnpm --filter nested_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
