--- a/version-discrepancy/package.json
+++ b/version-discrepancy/package.json
@@ -1,8 +1,6 @@
 {
   "name": "version-discrepancy",
   "private": true,
-
-
   "workspaces": [
     "./app1",
     "./app2"
@@ -13,7 +11,7 @@
     "build": "pnpm --filter version-discrepancy_app* build",
     "serve": "pnpm --filter version-discrepancy_app* --parallel serve",
     "clean": "pnpm --filter version-discrepancy_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
