--- a/cra-react-app-rewired/remote/package.json
+++ b/cra-react-app-rewired/remote/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "remote-cra",
+  "name": "cra-react-app-rewired_remote",
   "version": "0.1.0",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "3.5.0"
   },
   "scripts": {
     "start": "PORT=3001 react-app-rewired start",
@@ -33,6 +34,12 @@
   "devDependencies": {
     "customize-cra": "1.0.0",
     "react-app-rewired": "2.2.1",
-    "webpack": "5.80.0"
+    "webpack": "5.80.0",
+    "typescript": "5.2.2",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "6.1.4",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11",
+    "@types/jest": "29.5.2"
   }
 }
