--- a/complete-react-case/package.json
+++ b/complete-react-case/package.json
@@ -1,15 +1,10 @@
 {
   "name": "complete-react-case",
   "private": true,
-  "workspaces": [
-    "component-app",
-    "./lib-app",
-    "./main-app"
-  ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently 'cd ./component-app && yarn start' 'cd ./lib-app && yarn start' 'cd ./main-app && yarn start'",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "start": "pnpm --filter complete-react-case_* --parallel start",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +14,6 @@
   },
   "homepage": "https://github.com/anderlaw/react-webpack-MF#readme",
   "devDependencies": {
-    "concurrently": "7.6.0",
     "wait-on": "7.0.1"
   }
 }
