--- a/comprehensive-demo-react16/package.json
+++ b/comprehensive-demo-react16/package.json
@@ -1,23 +1,15 @@
 {
   "name": "comprehensive-demo-react16",
-  "workspaces": [
-    "./app-01",
-    "./app-02",
-    "./app-03",
-    "./app-04",
-    "./app-05"
-  ],
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently \"pnpm --filter comprehensive-demo-react16_app* --parallel start\" \"yarn serve\"",
+    "start": "pnpm build && pnpm serve",
     "build": "pnpm --filter comprehensive-demo-react16_app* build",
     "serve": "pnpm --filter comprehensive-demo-react16_app* --parallel serve",
     "clean": "pnpm --filter comprehensive-demo-react16_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "concurrently": "7.6.0",
     "wait-on": "7.0.1"
   }
 }
