--- a/cra-react-app-rewired/host/package.json
+++ b/cra-react-app-rewired/host/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "host",
+  "name": "cra-react-app-rewired_host",
   "version": "0.1.0",
-
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@testing-library/jest-dom": "6.1.4",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11",
+    "@types/jest": "29.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
