--- a/cra-react-app-rewired/package.json
+++ b/cra-react-app-rewired/package.json
@@ -1,19 +1,15 @@
 {
   "name": "cra-react-app-rewired",
   "private": true,
-  "workspaces":  [
-      "./host",
-      "./remote"
-    ],
   "version": "0.0.0",
   "scripts": {
-    "start": "concurrently 'cd ./host && yarn start' 'cd ./remote && yarn start'",
-    "build": "concurrently 'cd ./host && yarn build' 'cd ./remote && yarn build'",
-    "test": "concurrently 'cd ./host && yarn serve' 'cd ./remote && yarn serve'",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "start": "pnpm --filter cra-react-app-rewired_* --parallel start",
+    "build": "pnpm --filter cra-react-app-rewired_* --parallel build",
+    "serve": "pnpm --filter cra-react-app-rewired_* --parallel serve",
+    "clean": "pnpm --filter cra-react-app-rewired_* --parallel clean",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && pnpm cypress run --config-file ../../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "concurrently": "7.6.0",
     "wait-on": "7.0.1"
   }
 }
