--- a/dynamic-system-host/package.json
+++ b/dynamic-system-host/package.json
@@ -12,7 +12,7 @@
     "build": "pnpm --filter dynamic-system-host_app* build",
     "serve": "pnpm --filter dynamic-system-host_app* --parallel serve",
     "clean": "pnpm --filter dynamic-system-host_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
