--- a/federated-css-react-ssr/shell-apps/jss-styled-components/package.json
+++ b/federated-css-react-ssr/shell-apps/jss-styled-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@server-side-rendering/shell4",
+  "name": "federated-css-react-ssr_shell4",
   "description": "React 18 architecture at scale with module federation",
   "version": "1.0.0",
   "main": "server/index.js",
