--- a/federated-css-react-ssr/expose-apps/expose-css/package.json
+++ b/federated-css-react-ssr/expose-apps/expose-css/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@server-side-rendering/expose-css",
-
+  "name": "federated-css-react-ssr_expose-css",
   "version": "1.0.0",
   "scripts": {
-    "build": "yarn build:client && yarn build:server",
+    "build": "pnpm build:client && pnpm build:server",
     "build:client": "webpack --mode development --config config/webpack.client.js",
     "build:server": "webpack --mode development --config config/webpack.server.js",
     "serve": "npx serve dist/ -p 3001",
-    "start": "yarn build && yarn serve"
+    "start": "pnpm build && pnpm serve"
   },
   "license": "MIT",
   "devDependencies": {
@@ -18,6 +17,8 @@
     "@module-federation/node": "0.16.2",
     "babel-loader": "8.2.5",
     "html-webpack-plugin": "5.5.1",
+    "postcss-loader": "7.3.3",
+    "css-loader": "6.8.1",
     "webpack": "5.80.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.13.3",
