--- a/federated-css-react-ssr/expose-apps/expose-scss/package.json
+++ b/federated-css-react-ssr/expose-apps/expose-scss/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@server-side-rendering/expose-scss",
+  "name": "federated-css-react-ssr_expose-scss",
   "version": "1.0.0",
   "scripts": {
-    "build": "yarn build:client && yarn build:server",
+    "build": "pnpm build:client && pnpm build:server",
     "build:client": "webpack --mode production --config config/webpack.client.js",
     "build:server": "webpack --mode production --config config/webpack.server.js",
     "serve": "npx serve dist/ -p 3004",
-    "start": "yarn build && yarn serve"
+    "start": "pnpm build && pnpm serve"
   },
   "license": "MIT",
   "devDependencies": {
@@ -16,6 +16,9 @@
     "@babel/preset-react": "7.18.6",
     "@module-federation/node": "0.16.2",
     "babel-loader": "8.2.5",
+    "postcss-loader": "7.3.3",
+    "css-loader": "6.8.1",
+    "sass-loader": "13.3.2",
     "html-webpack-plugin": "5.5.1",
     "webpack": "5.80.0",
     "webpack-cli": "4.9.2",
