--- a/federated-css-react-ssr/expose-apps/expose-tailwind-css/package.json
+++ b/federated-css-react-ssr/expose-apps/expose-tailwind-css/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@server-side-rendering/expose-tailwind-css",
-
+  "name": "federated-css-react-ssr_expose-tailwind-css",
   "version": "1.0.0",
   "scripts": {
-    "build": "yarn build:client && yarn build:server",
+    "build": "pnpm build:client && pnpm build:server",
     "build:client": "webpack --mode production --config config/webpack.client.js",
     "build:server": "webpack --mode production --config config/webpack.server.js",
     "serve": "npx serve dist/ -p 3003",
-    "start": "yarn build && yarn serve"
+    "start": "pnpm build && pnpm serve"
   },
   "license": "MIT",
   "devDependencies": {
@@ -19,6 +18,8 @@
     "babel-loader": "8.2.5",
     "@headlessui/react": "1.7.17",
     "@heroicons/react": "2.0.18",
+    "postcss-loader": "7.3.3",
+    "css-loader": "6.8.1",
     "html-webpack-plugin": "5.5.1",
     "webpack": "5.80.0",
     "webpack-cli": "4.9.2",
