--- a/federated-css-react-ssr/shell-apps/less-scss/package.json
+++ b/federated-css-react-ssr/shell-apps/less-scss/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@server-side-rendering/shell7",
+  "name": "federated-css-react-ssr_shell7",
   "description": "React 18 architecture at scale with module federation",
   "version": "1.0.0",
   "main": "server/index.js",
