--- a/federated-css/expose-remotes/expose-tailwind-css-module/package.json
+++ b/federated-css/expose-remotes/expose-tailwind-css-module/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@federated-css/expose-tailwind-css-module",
+  "name": "federated-css-mono_expose-tailwind-css-module",
   "version": "0.0.0",
-
   "devDependencies": {
     "@babel/core": "7.21.4",
     "@babel/preset-react": "7.18.6",
