--- a/federated-css/package.json
+++ b/federated-css/package.json
@@ -1,12 +1,10 @@
 {
   "version": "1.2.3",
   "private": true,
-
-
   "name": "federated-css-mono",
   "scripts": {
-    "build": "pnpm --filter build",
-    "clean": "pnpm --filter --parallel clean",
+    "build": "pnpm --filter federated-css-mono_* --parallel build",
+    "clean": "pnpm --filter federated-css-mono_* --parallel clean",
     "start:expose-all": "pnpm --filter @federated-css/{expose-css,expose-css-module --filter expose-jss --filter expose-less --filter expose-scss --filter expose-styled-component --filter expose-tailwind-css-global --filter expose-tailwind-css-module --parallel start",
     "start:react:css-styled-component": "pnpm --filter @federated-css/css-and-styled-component --parallel start",
     "start:react:less-scss": "pnpm --filter @federated-css/less-and-scss --parallel start",
