--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -2,17 +2,17 @@
   "name": "federated-npm",
   "private": true,
   "workspaces": [
-      "./app1",
-      "./app2",
-      "./app3"
-    ],
+    "./app1",
+    "./app2",
+    "./app3"
+  ],
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm --filter federated-npm_* --parallel start",
     "build": "pnpm --filter build",
     "serve": "pnpm --filter federated-npm_* --parallel serve",
     "clean": "pnpm --filter federated-npm_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "wait-on": "7.0.1"
