--- a/genesis/ssr-mf-about/package.json
+++ b/genesis/ssr-mf-about/package.json
@@ -3,10 +3,9 @@
   "version": "2.3.10",
   "main": "index.js",
   "license": "MIT",
-
   "scripts": {
     "dev": "genesis-ts-node --project=./tsconfig.node.json genesis.dev",
-    "build": "rm -rf dist types && yarn run build:dts && yarn run build:vue && yarn run build:node",
+    "build": "rm -rf dist types && pnpm run build:dts && pnpm run build:vue && pnpm run build:node",
     "build:node": "NODE_ENV=production genesis-tsc --build ./tsconfig.node.json",
     "build:vue": "NODE_ENV=production genesis-ts-node --project=./tsconfig.node.json genesis.build",
     "build:dts": "npx vue-tsc --declaration --emitDeclarationOnly",
@@ -21,7 +20,7 @@
     "vue-router": "3.6.5"
   },
   "dependencies": {
-      "@fmfe/genesis-core": "2.3.10",
-      "express": "4.17.2"
+    "@fmfe/genesis-core": "2.3.10",
+    "express": "4.17.2"
   }
 }
