--- a/medusa-delegate-example/package.json
+++ b/medusa-delegate-example/package.json
@@ -2,27 +2,25 @@
   "name": "medusa-delegate-example",
   "version": "1.0.0",
   "private": true,
-
-
   "scripts": {
-    "start": "concurrently \"cd dsl; yarn start\" \"cd home; yarn start\" \"cd nav; yarn start\" \"cd search; yarn start\" \"cd utils; yarn start\"",
-    "stackblitzStart": "cd dsl; yarn build && cd ../home; yarn build && cd ../nav; yarn build && cd ../search; yarn build && cd ../utils; yarn build && yarn serve",
-    "build": "concurrently \"cd dsl; yarn build\" \"cd home; yarn build\" \"cd nav; yarn build\" \"cd search; yarn build\" \"cd utils; yarn build\"",
-    "serve": "concurrently \"yarn serve:dsl\" \"yarn serve:home\" \"yarn serve:nav\" \"yarn serve:search\" \"yarn serve:utils\"",
-    "serve:dsl": "cd dsl; yarn serve",
-    "serve:home": "cd home; yarn serve",
-    "serve:nav": "cd nav; yarn serve",
-    "serve:search": "cd search; yarn serve",
-    "serve:utils": "cd utils; yarn serve",
+    "start": "concurrently \"cd dsl; pnpm start\" \"cd home; pnpm start\" \"cd nav; pnpm start\" \"cd search; pnpm start\" \"cd utils; pnpm start\"",
+    "stackblitzStart": "cd dsl; pnpm build && cd ../home; pnpm build && cd ../nav; pnpm build && cd ../search; pnpm build && cd ../utils; pnpm build && pnpm serve",
+    "build": "concurrently \"cd dsl; pnpm build\" \"cd home; pnpm build\" \"cd nav; pnpm build\" \"cd search; pnpm build\" \"cd utils; pnpm build\"",
+    "serve": "concurrently \"pnpm serve:dsl\" \"pnpm serve:home\" \"pnpm serve:nav\" \"pnpm serve:search\" \"pnpm serve:utils\"",
+    "serve:dsl": "cd dsl; pnpm serve",
+    "serve:home": "cd home; pnpm serve",
+    "serve:nav": "cd nav; pnpm serve",
+    "serve:search": "cd search; pnpm serve",
+    "serve:utils": "cd utils; pnpm serve",
     "clean": "pnpm --filter --scope @dashboard-delegate/* --parallel clean"
   },
   "workspaces": [
-      "./dsl",
-      "./home",
-      "./nav",
-      "./search",
-      "./utils"
-    ],
+    "./dsl",
+    "./home",
+    "./nav",
+    "./search",
+    "./utils"
+  ],
   "devDependencies": {
     "concurrently": "7.6.0"
   }
