--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular11-microfrontends-scully",
     "angular12-microfrontends",
     "umd-federation",
+    "umd-federation/*",
     "angular14-react",
     "angular14-react/*",
     "angular15-vue3/*",
