add typescript back

--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "modernjs/*",
     "modernjs-medusa",
     "modernjs-medusa/*",
+    "typescript",
+    "typescript/*",
     "native-federation-react",
     "native-federation-tests-typescript-plugins",
     "native-federation-tests-typescript-plugins/*",
